# SnackBuildersBakeryApi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: AI_USAGE.md  ARCHITECTURE.md  ASSUMPTIONS.md
docs/adr/: 001-stack-choice.md  002-clean-architecture-modular-monolith.md  003-event-driven-scheduler.md  004-time-abstraction.md  005-aging-algorithm.md
docs/diagrams/: architecture.md  order-state-machine.md  scheduler-flow.md
src/domain/: exceptions.py
src/domain/entities/: customer.py  item.py  menu_item.py  order.py
src/domain/value_objects/: bake_time.py  customer_type.py  ids.py  item_status.py  money.py  order_status.py  priority.py
tests/unit/domain/entities/: test_customer.py  test_item.py  test_menu_item.py  test_order.py
tests/unit/domain/value_objects/: test_bake_time.py  test_customer_type.py  test_ids.py  test_item_status.py  test_money.py  test_order_status.py  test_priority.py
